k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubelabs
  namespace: kubelabs
spec:
  selector:
    app: kubelabs
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
